--- a/env.example
+++ b/env.example
@@ -1,17 +1,74 @@
-# Google Sheets Configuration
+# ========================================
+# КОНФИГУРАЦИЯ GOOGLE SHEETS API
+# ========================================
+
+# URL вашей Google таблицы
 SPREADSHEET_URL=https://docs.google.com/spreadsheets/d/your-spreadsheet-id/edit
 
-# Database Configuration (optional)
+# ========================================
+# КОНФИГУРАЦИЯ БАЗЫ ДАННЫХ
+# ========================================
+
+# URL базы данных SQLite (по умолчанию)
 DATABASE_URL=sqlite:///real_estate.db
 
-# Logging Configuration (optional)
+# ========================================
+# КОНФИГУРАЦИЯ ЛОГИРОВАНИЯ
+# ========================================
+
+# Уровень логирования (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL=INFO
+
+# Файл для записи логов
 LOG_FILE=parser.log
 
-# Parsing Configuration (optional)
-PARSING_INTERVAL=300  # seconds between parsing runs
+# ========================================
+# КОНФИГУРАЦИЯ ПАРСИНГА
+# ========================================
+
+# Интервал между запусками парсинга (в секундах)
+PARSING_INTERVAL=300
+
+# Максимальное количество попыток при ошибках
 MAX_RETRIES=3
 
-# Selenium Configuration (optional)
+# Задержка между запросами (в секундах)
+REQUEST_DELAY=2
+
+# ========================================
+# КОНФИГУРАЦИЯ SELENIUM/PLAYWRIGHT
+# ========================================
+
+# Запуск браузера в фоновом режиме (true/false)
 HEADLESS=true
-BROWSER_TIMEOUT=30 
+
+# Таймаут для загрузки страницы (в секундах)
+BROWSER_TIMEOUT=30
+
+# Размер окна браузера
+BROWSER_WIDTH=1920
+BROWSER_HEIGHT=1080
+
+# ========================================
+# КОНФИГУРАЦИЯ ПЛАНИРОВЩИКА
+# ========================================
+
+# Интервал очистки базы данных (в неделях)
+CLEAR_INTERVAL_WEEKS=2
+
+# ========================================
+# КОНФИГУРАЦИЯ ПРОКСИ (ОПЦИОНАЛЬНО)
+# ========================================
+
+# Использовать прокси (true/false)
+USE_PROXY=false
+
+# Адрес прокси сервера
+PROXY_HOST=127.0.0.1
+PROXY_PORT=8080
+
+# Логин для прокси (если требуется)
+PROXY_USERNAME=
+
+# Пароль для прокси (если требуется)
+PROXY_PASSWORD= 
