Обновлен README и .env.example: только актуальные переменные и инструкции

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-ID_KRISHA=
-PASSWORD_KRISHA=
-SPREADSHEET_URL=
+﻿# ========================================
+# КОНФИГУРАЦИЯ ПАРСЕРА НЕДВИЖИМОСТИ
+# ========================================
+
+# Данные для входа на Krisha.kz
+ID_KRISHA=your_krisha_login
+PASSWORD_KRISHA=your_krisha_password
+
+# URL вашей Google таблицы
+SPREADSHEET_URL=https://docs.google.com/spreadsheets/d/your-spreadsheet-id/edit
+
+# ========================================
+# ПРИМЕЧАНИЯ:
+# ========================================
+# 1. Замените your_krisha_login на ваш логин Krisha.kz
+# 2. Замените your_krisha_password на ваш пароль Krisha.kz
+# 3. Замените your-spreadsheet-id на ID вашей Google таблицы
+# 4. Убедитесь, что таблица доступна для Service Account
